Changed the logo of the website Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/signup.css
+++ b/signup.css
@@ -1,7 +1,17 @@
 body{
   background:url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/dark_wall.png);
-}
 
+}
+h1{
+  element.style {
+}
+user agent stylesheet
+a:-webkit-any-link {
+    color: -webkit-link;
+    text-decoration: none;
+    cursor: auto;
+}
+}
 
 
 /*sass variables used*/
