Fixed fonts Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/signup.css
+++ b/signup.css
@@ -2,10 +2,10 @@ body{
   background:url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/dark_wall.png);
 
 }
+font-family: 'Pavanam', sans-serif;
 h1{
   element.style {
 }
-user agent stylesheet
 a:-webkit-any-link {
     color: -webkit-link;
     text-decoration: none;
