--- a/signup.css
+++ b/signup.css
@@ -1,5 +1,5 @@
-body{
-  background:url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/dark_wall.png);
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Pavanam">body{
+  /*background:url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/dark_wall.png);*/
 
 }
 font-family: 'Pavanam', sans-serif;
@@ -41,7 +41,7 @@ $align:center;
 h2{
   text-align:$align;
   padding:30px 0px 0px 0px;
-  font:25px Oswald;
+  font-family: 'Pavanam', sans-serif;
   color:#FFF;
   text-transform:uppercase;
   text-shadow:#000 0px 1px 5px;
@@ -49,8 +49,8 @@ h2{
 }
 
 p{
-  font:13px Open Sans;
-  color:#6E6E6E;
+  font-family: 'Pavanam', sans-serif;
+  color:#FFFFFF;
   text-shadow:#000 0px 1px 5px;
   margin-bottom:30px;
 }
@@ -68,7 +68,7 @@ input[type="text"],input[type="email"]{
   @include disable;
   border:1px solid rgba(0,0,0,1);
   margin-bottom:10px;
-  color:#6E6E6E;
+  color:#FFFFFF;
   text-shadow:#000 0px 1px 5px;
 }
 
@@ -77,17 +77,17 @@ input[type="submit"]{
   padding:15px;
   border-radius:5px;
   @include disable;
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#28D2DE), to(#1A878F));
-  background-image: -webkit-linear-gradient(#28D2DE 0%, #1A878F 100%);
-  background-image: -moz-linear-gradient(#28D2DE 0%, #1A878F 100%);
-  background-image: -o-linear-gradient(#28D2DE 0%, #1A878F 100%);
-  background-image: linear-gradient(#28D2DE 0%, #1A878F 100%);
-  font:14px Oswald;
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#F19F4D), to(#B47739));
+  background-image: -webkit-linear-gradient(#F19F4D 0%, #B47739 100%);
+  background-image: -moz-linear-gradient(#F19F4D 0%, #B47739 100%);
+  background-image: -o-linear-gradient(#F19F4D 0%, #B47739 100%);
+  background-image: linear-gradient(#F19F4D 0%, #B47739 100%);
+  font-family: 'Pavanam', sans-serif;
   color:#FFF;
   text-transform:uppercase;
   text-shadow:#000 0px 1px 5px;
   border:1px solid #000;
-  opacity:0.7;
+  /*opacity:0.7;*/
   -webkit-box-shadow: 0 8px 6px -6px rgba(0,0,0,0.7);
   -moz-box-shadow: 0 8px 6px -6px rgba(0,0,0,0.7);
   box-shadow: 0 8px 6px -6px rgba(0,0,0,0.7);
@@ -95,13 +95,18 @@ input[type="submit"]{
   -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(rgba(255,255,255,0.2)));
 }
 
+
 input:focus{
   box-shadow:inset 4px 6px 10px -4px rgba(0,0,0,0.7), 0 1px 1px -1px rgba(255,255,255,0.3);
   background:rgba(0,0,0,0.3);
   @include easeme;
 }
+div a:hover{
+  background-color: #B47739
+}
 
 input[type="submit"]:hover{
+  background-color: #F19F4D;
   opacity:1;
   cursor:pointer;
 }
