--- a/p.css
+++ b/p.css
@@ -1,14 +1,30 @@
+
+@import 'https://fonts.googleapis.com/css?family=Pavanam';
 * {
-	font-family:Pavanam;
+	font-family:'Pavanam';
 }
 
 h2{
 	text-align:center;
 }
-table, th, td{
+table, th{
 
 	border:2px solid #D9D9D9;
 	border-collapse:collapse;
 	border-radius:5px;
 	padding:50px;
+}
+td{
+	border:2px solid #D9D9D9;
+	border-radius:5px;
+	padding:50px;
+	color:black;
+	text-align:center;
+	font-size:25px;
+}
+tr:nth-child(even){
+	background-color:red;
+}
+tr:nth-child(odd){
+	background-color:green;
 }
