--- a/index.css
+++ b/index.css
@@ -1,33 +1,84 @@
-<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Pavanam">
-font-family: 'Pavanam', sans-serif;
-
-h3{
-	font-family: 'Pavanam', sans-serif;
-	font-size: 34px;
-	top: 450px;
-  	left: 575px;
-  	-webkit-transition: opacity 2s ease-in;
-  	opacity: 0;
-
+body{
+  background:url(http://walkingfeat.com/wp-content/uploads/2015/10/connect-1024x504.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+html{
+  font-family: 'Pavanam', sans-serif;
+  text-decoration: none;
+  vertical-align: middle;
+}
+h1{
+  margin-top: 0px;
+  margin-bottom: 0px;
+  height: 0px;
+  background-color: white;
+  element.style {
+  }
+}
+a:-webkit-any-link{
+  color: black;
+  cursor: auto;
 }
 
-.relative{
-  position: absolute;
-  top: 350px;
-  left: 560px;
+div.container{
+  text-align: center;
   font-family: 'Pavanam', sans-serif;
-  font-size: 48px;
   font-weight: bold;
-  opacity:1;
-
+  font-size: 36px;
+  height: 50px;
+  width: 400px;
+  position: absolute;
+  z-index: 2;
+  margin-left:-200px;
+  left:55%;
+  bottom: 70%;
 
 }
 
-.relative2{
-  position: absolute;
-  top: 550px;
-  left: 490px;
+form{
+  display: inline-block;
+}
+.button{
   font-family: 'Pavanam', sans-serif;
-  font-size: 34px;
-
+  background-color: transparent; ;
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+}
+.button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.button2{
+  font-weight: bold;
+  font-family: 'Pavanam', sans-serif;
+  background-color: white ;
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  opacity: 0.9;
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1dada6), to(#FFF));
+  background-image: -webkit-linear-gradient(#1dada6 0%, #FFF 100%);
+  background-image: -moz-linear-gradient(#1dada6 0%, #FFF 100%);
+  background-image: -o-linear-gradient(#1dada6 0%, #FFF 100%);
+  background-image: linear-gradient(#1dada6 0%, #FFF 100%);
+}
+.button2:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
