Changed font size of signup Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/signupFinal.css
+++ b/signupFinal.css
@@ -7,6 +7,7 @@ body{
 			font-family: 'Pavanam', sans-serif;
 			font-weight: bold;
 			vertical-align: middle;
+			font-size: 36px;
 			element.style {
 			}
 		}
