--- a/signupFinal.css
+++ b/signupFinal.css
@@ -46,7 +46,7 @@ body{
 			cursor: pointer;
 			-webkit-transition-duration: 0.4s;
 			transition-duration: 0.4s;
-			/*opacity: 0.9;*/
+			opacity: 0.9;
 			background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ff7a32), to(#FFF));
 			background-image: -webkit-linear-gradient(#ff7a32 0%, #FFF 100%);
 			background-image: -moz-linear-gradient(#ff7a32 0%, #FFF 100%);
